syntax = "proto3";

package github.com.go_email_validator.go_ev_presenters.pkg.presenters.check_if_email_exist;

option go_package = "github.com/go-email-validator/go-ev-presenters/pkg/api/v1/check_if_email_exist";

message Result {
  string input = 1;
  string is_reachable = 2;
  Misc misc = 3;
  MX mx = 4;
  SMTP smtp = 5;
  Syntax syntax = 6;
}

message Disposable {
  bool is_disposable = 1;
}

message MX {
  bool accepts_mail = 1;
  repeated string records = 2;
}

message Misc {
  bool is_disposable = 1;
  bool is_role_account = 2;
}

message SMTP {
  bool can_connect_smtp = 1;
  bool has_full_inbox = 2;
  bool is_catch_all = 3;
  bool is_deliverable = 4;
  bool is_disabled = 5;
}

message Syntax {
  string username = 1;
  string domain = 2;
  bool is_valid_syntax = 3;
}
