syntax = "proto3";

package github.com.go_email_validator.go_ev_presenters.pkg.presenters.mailboxvalidator;

option go_package = "github.com/go-email-validator/go-ev-presenter/pkg/api/v1/mailboxvalidator";

message Result {
  string email_address = 1;
  string domain = 2;
  string is_free = 3;
  string is_syntax = 4;
  string is_domain = 5;
  string is_smtp = 6;
  string is_verified = 7;
  string is_server_down = 8;
  string is_greylisted = 9;
  string is_disposable = 10;
  string is_suppressed = 11;
  string is_role = 12;
  string is_high_risk = 13;
  string is_catchall = 14;
  string mailboxvalidator_score = 15;
  string time_taken = 16;
  string status = 17;
  uint32 credits_available = 18;
  string error_code = 19;
  string error_message = 20;
}
